Development
	When playlist is dropped on window or playlist viewer, don't autoplay, but setup to start at first item, unless random
	Load a playlist when dropped on the playlist window or on the player window
	Enable --random flag (prev item on playlist is still not great here)
	More GUI work on the playlist
	Common function to add item to playlist
	Only let there be one active playlist dialog
	Better drag and drop support for playlist
	Add dbus method Add "filename" to append a filename to the playlist
	Fix up dbus interface to use internal playlist
	Active selected song in playlist on doubleclick
	Make selected item on playlist follow active item
	Implement speed doublt key } and speed half key {
	Implement BackSpace as return to default speed and fix something dumb
	Implement speed increase key ] and speed decrease key [
	Add CDDA parsing. So grab the track list off the CD and make it into a playlist
	Drag and drop to the playlist works
	More playlist work. The prev and next media buttons work properly now
	More playlist work, when opening a file or drag and dropping a file to the player window, clear the list
		and play the selected file. 
	If the playlist has more than 1 item in it, show some extra buttons (they don't work yet)
	Hide fixed drawing_area on startup (hopefully this won't cause mplayer to fail)
	Don't call gtk directly from a thread
	Support [playlist] and [reference] playlists
	Real basic playlist support, pass in multiple filenames on the command line and all will be played in order
	When receiving "Connecting" message, reset progress bar to 0%
	Start with playlist support
	Rather than deactivating the entire view menu only disable the "video" options until a video is present
	Italian translation by Cesare Tirabassi
0.4.7
	Add "-idx" option to mplayer when not running with a control id, -idx is bad for partially downloaded media
		ie from the plugin
	Cleanup a couple of garbage messages